data processing compete

--- a/src/notebooks/data_processing.ipynb
+++ b/src/notebooks/data_processing.ipynb
@@ -173,12 +173,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "e8c7dc58-9f76-4fa4-b60d-05286fc7a07a",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S3 Bucket jpx-stock-prediction has been successfully created.\n"
+     ]
+    }
+   ],
    "source": [
-    "bucket_name = 'jpx-stock-exchange'\n",
+    "bucket_name = 'jpx-stock-prediction'\n",
     "try:\n",
     "    s3.create_bucket(Bucket=bucket_name)\n",
     "    print(f'S3 Bucket {bucket_name} has been successfully created.')\n",
@@ -696,8 +706,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "f3897a12-a100-4074-bef6-3c02a0cd8ea2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages/numpy/core/fromnumeric.py:57: FutureWarning: 'DataFrame.swapaxes' is deprecated and will be removed in a future version. Please use 'DataFrame.transpose' instead.\n",
+      "  return bound(*args, **kwds)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train:(1778047, 66) \n",
+      "Test:(444512, 66)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_randomized = df_data_features.sample(frac=1, random_state=123)\n",
+    "train_data, test_data = np.split(df_randomized, [int(0.8*len(df_randomized))])\n",
+    "print(f\"Train:{train_data.shape} \\nTest:{test_data.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46cfe736-1c61-42d3-9281-8646c284279d",
+   "metadata": {},
+   "source": [
+    "## Upload to S3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "3ff6228b-973b-4672-be79-e2d881b3d0af",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "prefix = 'xgboost-builtin'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "f7e139a5-a879-4352-b443-22b4d155835b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Path: s3://jpx-stock-prediction/xgboost-builtin/train/train.csv\n",
+      "Test Path: s3://jpx-stock-prediction/xgboost-builtin/test/test.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_csv_path = 's3://{}/{}/{}/{}'.format(bucket_name,prefix,'train','train.csv')\n",
+    "test_csv_path = 's3://{}/{}/{}/{}'.format(bucket_name,prefix,'test','test.csv')\n",
+    "\n",
+    "print(f'Train Path: {train_csv_path}')\n",
+    "print(f'Test Path: {test_csv_path}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "f9d5257c-4ec1-49ac-8905-3f1dfe8f7ef5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "train_data.to_csv(train_csv_path, index=False, header=False)\n",
+    "test_data.to_csv(test_csv_path, index=False, header=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37d62125-ca7d-447a-9782-6354e6a967ed",
    "metadata": {},
    "outputs": [],
    "source": []
